# eeprommer3

./: .clang-format  .clangd  .gitignore  README.md  compile_flags.txt  todo  todo.txt  todo.yaml  workspace.code-workspace
firmware/: README.md
firmware/addrlatchtest/: addrlatchtest.ino
firmware/eeprommer3/: CMakeLists.txt  Makefile  Makefile~  ad_array.cpp  ad_array.hpp  ad_map.cpp  ad_map.hpp  bitmaps.hpp  comm.cpp  comm.hpp  constants.hpp  cpp_flags.txt  debug.cpp  debug.hpp  dialog.cpp  dialog.hpp  eeprom.cpp  eeprom.hpp  eeprommer3.ino  error.cpp  error.hpp  file.cpp  file.hpp  gui.cpp  gui.hpp  input.cpp  input.hpp  new_delete.cpp  new_delete.hpp  pfsd_core.cpp  pfsd_core.hpp  prog.cpp  prog.hpp  prog_core.cpp  prog_core.hpp  sd.cpp  sd.hpp  strfmt.cpp  strfmt.hpp  tempasdf  (+14 more)
firmware/eeprommer3/ad_map_test/: test  test.cpp
firmware/eeprommer3/build-mega2560/: comm.cpp.d  eeprom.cpp.d
firmware/eeprommer3/src/: ad_array.cpp  ad_array.hpp  comm.cpp  comm.hpp  constants.hpp  dialog.cpp  dialog.hpp  eeprom.cpp  eeprom.hpp  eeprommer3.cpp  error.cpp  error.hpp  file.cpp  file.hpp  gui.cpp  gui.hpp  new_delete.cpp  new_delete.hpp  prog.cpp  prog.hpp  prog_core.cpp  prog_core.hpp  sd.cpp  sd.hpp  strfmt.cpp  strfmt.hpp  tft.cpp  tft.hpp  tft_calc.cpp  tft_calc.hpp  tft_util.cpp  touch.cpp  touch.hpp  util.cpp  util.hpp  vector.cpp  vector.hpp
firmware/eeprommer3/src/file_template/: cpp  hpp
firmware/memory/: memory.ino
firmware/serialcxx/: serialcxx.ino
firmware/xmem/: Makefile  xmem.ino
hardware/: README.md
hardware/v1.0_20210721/: eeprommer3_EasyEDA.json
hardware/v1.1_20210721/: eeprommer3_pcb_EasyEDA.json  eeprommer3_sch_EasyEDA.json
software/: README.md  temp  temp2  temp3  temp4
software/src/: .#todo  args.cpp  backend.cpp  backend.hpp  comm.cpp  comm.cpp~  comm.hpp  comm.hpp~  comm.py  data.cpp  data.hpp  dlgbox.cpp  dlgbox.cpp~  dlgbox.hpp  dlgbox.hpp~  file.cpp  file.hpp  info.cpp  info.cpp~  info.hpp  info.hpp~  main.cpp  main.hpp  main.py  menu.cpp  menu.hpp  menu_handlers.cpp  todo  util.cpp  util.hpp  util.hpp~  util.tpp  util.tpp~  wx_dep.hpp
software/test/: Makefile  test.cpp
src/: Makefile  args.cpp  backend.cpp~  backend.hpp  backend.h~  data.cpp  data.hpp  data.hpp~  eeprommer3  main.cpp  main.hpp  menu.cpp  menu.cpp~  menu.hpp  menu.hpp~  menu_handlers.cpp  qaz  wx_dep.hpp  wx_dep.hpp~
test/: args.cpp  args.hpp  test  test.cpp  test.hpp
